Add descriptions for notebooks

--- a/Neuprint/Data_pull_Neuprint.ipynb
+++ b/Neuprint/Data_pull_Neuprint.ipynb
@@ -1,9 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the notebook for pulling data from neuPrint dataset, and save it into .csv file. For the TOKEN below, please change it to the personal token in neuPrint website. You can creat a new account [here](https://neuprint.janelia.org/help). Please check the website for more instructions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "active-meditation",
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "engaging-poison",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +139,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "unlimited-wagner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "alone-antibody",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +162,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "occasional-monitor",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +218,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "foreign-berlin",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +270,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "herbal-medication",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "constitutional-drilling",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +437,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "frequent-month",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +642,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fabulous-yahoo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
