--- a/Neuprint/DiGraph-neuPrint.ipynb
+++ b/Neuprint/DiGraph-neuPrint.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook, we will convert the obtained .csv file from neuPrint dataset into .json file using GraphIO. First, read the data from .csv files."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +44,7 @@
        "[8034510 rows x 9 columns]>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,6 +55,7 @@
     "import matplotlib.pyplot as plt\n",
     "from graph import GraphIO\n",
     "G_Neuprint = nx.DiGraph()\n",
+    "\n",
     "df = pd.read_csv('Neuprint_connections.csv')\n",
     "df_2 = pd.read_csv('Neuprint_neuron_all.csv')\n",
     "df_3 = pd.read_csv('neuPrint_roicounts.csv')\n",
@@ -56,7 +64,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of         Unnamed: 0      bodyId  instance type  pre  post         size  \\\n",
+       "0                0   106979579  Franken1  NaN    3     6     97628357   \n",
+       "1                1   108632992  Franken2  NaN   13    55  10146826497   \n",
+       "2                2   198469830       NaN  NaN    0     0      6665418   \n",
+       "3                3   198810827       NaN  NaN    0     0      9211633   \n",
+       "4                4   198815212       NaN  NaN    0     0     27720313   \n",
+       "...            ...         ...       ...  ...  ...   ...          ...   \n",
+       "186056      186056  7112626663       NaN  NaN   40    52     73261205   \n",
+       "186057      186057  7112626669       NaN  NaN    7     2      8669132   \n",
+       "186058      186058  7112626688       NaN  NaN    0    10      3813327   \n",
+       "186059      186059  7112626733       NaN  NaN    2    26      6115066   \n",
+       "186060      186060  7112626771       NaN  NaN    0    11       248547   \n",
+       "\n",
+       "             status cropped  statusLabel cellBodyFiber  somaRadius  \\\n",
+       "0       Unimportant     NaN  Unimportant           NaN         NaN   \n",
+       "1       Unimportant     NaN  Unimportant           NaN       301.0   \n",
+       "2            Traced    True       Leaves           NaN       299.0   \n",
+       "3            Traced    True       Leaves           NaN       299.0   \n",
+       "4            Traced    True       Leaves           NaN       299.0   \n",
+       "...             ...     ...          ...           ...         ...   \n",
+       "186056       Assign     NaN    0.5assign           NaN         NaN   \n",
+       "186057       Assign     NaN    0.5assign           NaN         NaN   \n",
+       "186058       Assign     NaN    0.5assign           NaN         NaN   \n",
+       "186059       Assign     NaN    0.5assign           NaN         NaN   \n",
+       "186060       Assign     NaN    0.5assign           NaN         NaN   \n",
+       "\n",
+       "                 somaLocation  \\\n",
+       "0                         NaN   \n",
+       "1       [18418, 11024, 11376]   \n",
+       "2        [33045, 15655, 3280]   \n",
+       "3        [33014, 16221, 3088]   \n",
+       "4        [33342, 16128, 3216]   \n",
+       "...                       ...   \n",
+       "186056                    NaN   \n",
+       "186057                    NaN   \n",
+       "186058                    NaN   \n",
+       "186059                    NaN   \n",
+       "186060                    NaN   \n",
+       "\n",
+       "                                                inputRois  \\\n",
+       "0                                 ['AMMC', 'PENP', 'SAD']   \n",
+       "1       ['CA(R)', 'GNG', 'IPS(R)', 'MB(+ACA)(R)', 'MB(...   \n",
+       "2                                                      []   \n",
+       "3                                                      []   \n",
+       "4                                                      []   \n",
+       "...                                                   ...   \n",
+       "186056                               ['SMP(L)', 'SNP(L)']   \n",
+       "186057                             ['AL(R)', 'AL-VC5(R)']   \n",
+       "186058                               ['SLP(R)', 'SNP(R)']   \n",
+       "186059                               ['SMP(R)', 'SNP(R)']   \n",
+       "186060                            ['AL(R)', 'AL-DL2d(R)']   \n",
+       "\n",
+       "                                               outputRois  \\\n",
+       "0                                 ['AMMC', 'PENP', 'SAD']   \n",
+       "1       ['CA(R)', 'GNG', 'IPS(R)', 'MB(+ACA)(R)', 'MB(...   \n",
+       "2                                                      []   \n",
+       "3                                                      []   \n",
+       "4                                                      []   \n",
+       "...                                                   ...   \n",
+       "186056                               ['SMP(L)', 'SNP(L)']   \n",
+       "186057                ['AL(R)', 'AL-VC5(R)', 'AL-VP2(R)']   \n",
+       "186058                                                 []   \n",
+       "186059                               ['SMP(R)', 'SNP(R)']   \n",
+       "186060                                                 []   \n",
+       "\n",
+       "                                                  roiInfo  \n",
+       "0       {'PENP': {'pre': 3, 'post': 4, 'downstream': 1...  \n",
+       "1       {'MB(R)': {'pre': 2, 'post': 12, 'downstream':...  \n",
+       "2                                                      {}  \n",
+       "3                                                      {}  \n",
+       "4                                                      {}  \n",
+       "...                                                   ...  \n",
+       "186056  {'SNP(L)': {'pre': 40, 'post': 52, 'downstream...  \n",
+       "186057  {'AL(R)': {'pre': 7, 'post': 2, 'downstream': ...  \n",
+       "186058   {'SNP(R)': {'post': 10}, 'SLP(R)': {'post': 10}}  \n",
+       "186059  {'SNP(R)': {'pre': 2, 'post': 26, 'downstream'...  \n",
+       "186060  {'AL(R)': {'post': 11}, 'AL-DL2d(R)': {'post':...  \n",
+       "\n",
+       "[186061 rows x 16 columns]>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2.head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of         Unnamed: 0      bodyId         roi  pre  post\n",
+       "0                0   106979579        PENP    3     4\n",
+       "1                1   106979579         SAD    3     4\n",
+       "2                2   106979579        AMMC    3     4\n",
+       "3                3   108632992       MB(R)    2    12\n",
+       "4                4   108632992       CA(R)    2    12\n",
+       "...            ...         ...         ...  ...   ...\n",
+       "629897      629897  7112626688      SLP(R)    0    10\n",
+       "629898      629898  7112626733      SNP(R)    2    26\n",
+       "629899      629899  7112626733      SMP(R)    2    26\n",
+       "629900      629900  7112626771       AL(R)    0    11\n",
+       "629901      629901  7112626771  AL-DL2d(R)    0    11\n",
+       "\n",
+       "[629902 rows x 5 columns]>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_3.head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert the data into different lists before saving into networkx."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,8 +254,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transfer data into networkx"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G_Neuprint.graph['Sex'] = 'Female'\n",
+    "G_Neuprint.graph['Synapse Type'] = 'Chemical'\n",
+    "G_Neuprint.graph['Title'] = \"This neuPrint data is based on the FlyEM hemibrain dataset v1.2. The source data is abtained from the semibrain sample of sigle felmale fly. It produces a connectome consisting of reconstructed neuron morphologies and the chemical synapses between them. For more information, please check on the source website(https://www.janelia.org/project-team/flyem/hemibrain). In this file, we set unique bodyId as different nodes. For more information about the attributes in this file, please see the instruction file or check Graph Attributes on wiki.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,31 +332,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Store graph data into .json file using GraphIO"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from graph import GraphIO\n",
     "\n",
-    "GraphIO.dump(G_Neuprint, './neuPrint/neuPrint_graphs.json')"
+    "GraphIO.dump(G_Neuprint, './neuPrint/neuPrint_updated_05032021.json')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "GraphIO.load('./neuPrint/neuPrint_graphs.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
