Adding Synapse Types

--- a/fafb/fafb_import.ipynb
+++ b/fafb/fafb_import.ipynb
@@ -103,7 +103,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "/mnt/c/Users/casey/Documents/School/Senior Year/First Semester/NDD/2020-2021/connectocross\n"
+      "/mnt/c/Users/casey/Documents/School/Senior Year/First Semester/NDD/2020-2021/MyFork/connectocross\n"
      ]
     }
    ],
@@ -155,7 +155,11 @@
     "        connectome_nx.nodes[id]['X'] = False\n",
     "        connectome_nx.nodes[id]['Y'] = False\n",
     "        connectome_nx.nodes[id]['Z'] = False\n",
-    "        connectome_nx.nodes[id]['Side'] = False\n"
+    "        connectome_nx.nodes[id]['Side'] = False\n",
+    "\n",
+    "for edge in connectome_nx.edges:\n",
+    "\n",
+    "    connectome_nx.edges[edge]['synapse_type'] = \"chemical\""
    ]
   },
   {
