place notebooks in docs, cleanup

--- a/docs/apriori_sbms.ipynb
+++ b/docs/apriori_sbms.ipynb
@@ -9,8 +9,17 @@
     }
    },
    "source": [
-    "## Comparison: a-Priori SBM Fitting with Different Groupings ##\n",
-    "\n",
+    "# Comparing a-Priori SBM Fitting with Different Groupings #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
     "It is often desirable to create models of data so we can generate new samples, learn something about the data' structure,\n",
     "or for use in some larger analysis. SBM models define different connection probabilities for different communities in\n",
     "a graph.\n",
@@ -28,76 +37,73 @@
     "is only preformed on the Ciona Intestinalis Connectome, two C. Elegans Worm Wiring Connectomes, and the 8 C. Elegans\n",
     "Developmental Connectomes, because only these have both these attributes defined.\n",
     "\n",
-    "*Note that the code to do the actual SBM fitting is located in `apriori_sbms.py`*"
+    "*Note that the code to do the actual SBM fitting is located in `analysis/apriori_sbm_code.py`*"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "import matplotlib.pyplot as plt\n",
     "sys.path.append(\"../\")\n",
-    "import graspologic as gr\n",
-    "from graspologic import layouts\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import networkx as nx\n",
     "from graph import GraphIO\n",
-    "from apriori_sbm_code import fit_apriori_sbm"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "from analysis.apriori_sbm_code import fit_apriori_sbm"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Ciona Intestinalis ##\n",
-    "We'll start with the single Ciona Connectome. First we load the data:"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "## Ciona Intestinalis ##\n",
+    "We'll start with the single Ciona Connectome. First we load the data:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "path = '../json_connectomes/ciona.json'\n",
     "ciona_connectome, _, _, _ = GraphIO.load(path)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Now we'll fit an SBM for each grouping"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Now we'll fit an SBM for each grouping"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# In Ciona, Hemisphere is called side and cell_type is called annotation\n",
@@ -110,29 +116,27 @@
     "                           for j in rows[i].keys()},\n",
     "                       orient='index')\n",
     "ciona_results.head()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Great, now lets plot the BIC for different groupings:"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Great, now lets plot the BIC for different groupings:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(2, 1)\n",
@@ -144,77 +148,71 @@
     "    ax[0].set(xlabel='Group', ylabel='-BIC')\n",
     "    ax[1].set(xlabel='Group', ylabel='Likelihood')\n",
     "fig.suptitle('BIC and Likelihood: Witvilet at Different Developmental Stages')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Interesting, it appears annotation has the best BIC but the worst liklihood. This is\n",
     "probably because annotation has much fewer parameters than the other groupings. (For Ciona\n",
     "'Side' is broken into 11 groupings instead of just 'Left' and 'Right'). Therefore, based on\n",
     "the BIC, annotation explains the structure better, and the other groupings are likely\n",
     "fitting noise."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## C. Elegans Developmental Conectomes (Witviliet) ##\n",
     "\n",
     "We will preform this analysis for all 8 developmental stages at once."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# load some elegans witvilet data\n",
-    "base = '../c_elegans/witvilet2020/graphs/'\n",
+    "base = '../json_connectomes/witvilet/'\n",
     "graph_files = sorted(os.listdir(base))\n",
     "wit_connectomes = []\n",
     "for f in graph_files:\n",
     "    # These contain multiple synapse types, and thus can have multiedges and need to be flattened.\n",
     "    # Alternatively, we could preform the analysis separately for each synapse type\n",
     "    wit_connectomes.append(GraphIO.flatten_multigraph(GraphIO.load(os.path.join(base, f))[0]))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "Now we will fit sbms for each grouping for each connectome."
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "Now we will fit sbms for each grouping for each connectome."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "groups = [[\"hemisphere\"], [\"cell_type0\"], [\"hemisphere\", \"cell_type0\"]]\n",
@@ -229,26 +227,23 @@
     "                           for j in rows[i].keys()},\n",
     "                       orient='index')\n",
     "wit_results.head(24)\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Let's plot the BIC and Likelihood"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(8, 2)\n",
@@ -263,58 +258,53 @@
     "plt.ylabel('-BIC \\t Likelihood')\n",
     "fig.suptitle('BIC and Likelihood: C. Elegans at Different Developmental Stages')\n",
     "fig.set_size_inches(16, 32)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Once again, we find that cell type explains the topology the best. This is still not entirely surprising, since the\n",
     "connectivity of interneurons should be very different than that of sensory or motor neurons"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## C. Elegans Male and Hermaphrodite Conectomes (Worm Wiring) ##"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "## C. Elegans Male and Hermaphrodite Conectomes (Worm Wiring) ##"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# load chemical synapse connectome files\n",
-    "path_h = '../c_elegans/worm_wiring/graphs/connectome/Hermaphrodite/0.json'\n",
-    "path_m = '../c_elegans/worm_wiring/graphs/connectome/Male/0.json'\n",
-    "ww_connectomes = []\n",
-    "ww_connectomes.append(GraphIO.load(path_h)[0])\n",
-    "ww_connectomes.append(GraphIO.load(path_m)[0])"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# load chemical synapse connectome files\n",
+    "path_h = '../json_connectomes/worm_wiring/connectome/Hermaphrodite/0.json'\n",
+    "path_m = '../json_connectomes/worm_wiring/connectome/Male/0.json'\n",
+    "ww_connectomes = []\n",
+    "ww_connectomes.append(GraphIO.load(path_h)[0])\n",
+    "ww_connectomes.append(GraphIO.load(path_m)[0])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "groups = [[\"hemisphere\"], [\"cell_type0\"], [\"hemisphere\", \"cell_type0\"]]\n",
@@ -330,26 +320,23 @@
     "                           for j in rows[i].keys()},\n",
     "                       orient='index')\n",
     "ww_results.head(6)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "One last time, we'll plot BIC and Likelihood"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(2, 2)\n",
@@ -364,22 +351,14 @@
     "plt.ylabel('-BIC \\t Likelihood')\n",
     "fig.suptitle('BIC and Likelihood: Worm Wiring C. Elegans Hermaphrodite and Male')\n",
     "fig.set_size_inches(16, 8)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "For a third time, cell type groupings get the best BIC, whcih makes sense since this is the same species as the developmental data\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "For a third time, cell type groupings get the best BIC. This makes sense since this is the same species as the developmental data\n"
+   ]
   }
  ],
  "metadata": {
@@ -391,16 +370,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
