--- a/docs/connectome_overview.ipynb
+++ b/docs/connectome_overview.ipynb
@@ -5,8 +5,18 @@
    "id": "decimal-faith",
    "metadata": {},
    "source": [
-    "## Connectome Overview, Basic Statistics, and Visualizations ##\n",
-    "\n",
+    "# Connectome Overview, Basic Statistics, and Visualizations #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "greatest-poland",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
     "This notebooks provides an overview of the 14 connectomes available in the connectocross repository, along with visualizations of each one and some basic statistics"
    ]
   },
@@ -222,7 +232,7 @@
    "outputs": [],
    "source": [
     "# load some elegans witvilet data\n",
-    "base = '../c_elegans/witvilet2020/graphs/'\n",
+    "base = '../json_connectomes/witvilet/'\n",
     "graph_files = sorted(os.listdir(base))\n",
     "connectomes = []\n",
     "for f in graph_files:\n",
@@ -384,8 +394,8 @@
    "outputs": [],
    "source": [
     "# load chemical synapse connectome files\n",
-    "path_h = '../c_elegans/worm_wiring/graphs/connectome/Hermaphrodite/0.json'\n",
-    "path_m = '../c_elegans/worm_wiring/graphs/connectome/Male/0.json'\n",
+    "path_h = '../json_connectomes/worm_wiring/connectome/Hermaphrodite/0.json'\n",
+    "path_m = '../json_connectomes/worm_wiring/connectome/Male/0.json'\n",
     "connectomes = []\n",
     "connectomes.append(GraphIO.load(path_h)[0])\n",
     "connectomes.append(GraphIO.load(path_m)[0])\n"
@@ -397,6 +407,7 @@
    "id": "martial-express",
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -416,6 +427,7 @@
    "id": "aware-hurricane",
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -440,6 +452,7 @@
    "id": "recent-allah",
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -469,6 +482,7 @@
    "id": "entitled-bangladesh",
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -517,6 +531,7 @@
    "id": "considered-efficiency",
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -532,6 +547,7 @@
    "id": "informational-attendance",
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -546,6 +562,7 @@
    "id": "unlike-cheese",
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -570,6 +587,7 @@
    "id": "spectacular-indicator",
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -592,6 +610,7 @@
    "id": "interesting-killer",
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -635,6 +654,7 @@
    "id": "seven-highway",
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -660,7 +680,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "mental-modern",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "num_nodes = len(connectome.nodes)\n",
@@ -680,7 +704,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "phantom-event",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
   }
